[gd_scene load_steps=39 format=2]

[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Scenes/Input.gd" type="Script" id=2]
[ext_resource path="res://Player/Scripts/OnHitHandler.gd" type="Script" id=3]
[ext_resource path="res://Player/Scenes/States.gd" type="Script" id=4]
[ext_resource path="res://Player/Scenes/Idle.gd" type="Script" id=5]
[ext_resource path="res://Player/Scenes/Move.gd" type="Script" id=6]
[ext_resource path="res://Player/Scenes/Walking.gd" type="Script" id=7]
[ext_resource path="res://Player/Scenes/Dashing.gd" type="Script" id=8]
[ext_resource path="res://Player/Scenes/Dash_particles.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/Scenes/Recharge.gd" type="Script" id=10]
[ext_resource path="res://Player/Scenes/Aim.gd" type="Script" id=11]
[ext_resource path="res://Player/Scenes/AimBeam.tscn" type="PackedScene" id=12]
[ext_resource path="res://Player/Scenes/Jumping.gd" type="Script" id=13]
[ext_resource path="res://Player/Scenes/Sliding.gd" type="Script" id=14]
[ext_resource path="res://Player/Scenes/Status.gd" type="Script" id=15]
[ext_resource path="res://Player/Scenes/Stunned.gd" type="Script" id=16]
[ext_resource path="res://Player/Scenes/Invincible.gd" type="Script" id=17]
[ext_resource path="res://Player/Scenes/Aiming.gd" type="Script" id=18]
[ext_resource path="res://Player/Scenes/Falling.gd" type="Script" id=19]
[ext_resource path="res://Player/Scenes/Movement.gd" type="Script" id=20]
[ext_resource path="res://Player/Scenes/Ground_ray.gd" type="Script" id=21]
[ext_resource path="res://Player/Scenes/GunHandler.gd" type="Script" id=22]
[ext_resource path="res://Player/Scenes/Gun.tscn" type="PackedScene" id=23]
[ext_resource path="res://Player/Scenes/Health.gd" type="Script" id=24]
[ext_resource path="res://Player/Scripts/Body.gd" type="Script" id=25]
[ext_resource path="res://Player/Sprites/BOT-3---Run_000-sheet.png" type="Texture" id=26]
[ext_resource path="res://FX/Scenes/GhostTrail.tscn" type="PackedScene" id=27]
[ext_resource path="res://Player/Scripts/Player_Timers.gd" type="Script" id=28]
[ext_resource path="res://Player/Scenes/Inv_time.gd" type="Script" id=29]
[ext_resource path="res://Player/Scenes/Hit_time.gd" type="Script" id=30]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.998055 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 20.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 9.81446 ), 26.8107, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
resource_local_to_scene = true
flag_disable_z = true
spread = 50.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
angular_velocity = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=6]
resource_name = "Fade"

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9, 30 )

[sub_resource type="Animation" id=8]
length = 10.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 14
collision_mask = 2
script = ExtResource( 1 )

[node name="PlayerPos" type="Position2D" parent="."]

[node name="InputHandler" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="OnHitHandler" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="StatesHandler" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 4 )

[node name="Idle" type="Node2D" parent="StatesHandler"]
script = ExtResource( 5 )

[node name="Move" type="Node2D" parent="StatesHandler"]
editor/display_folded = true
script = ExtResource( 6 )

[node name="Walking" type="Node2D" parent="StatesHandler/Move"]
script = ExtResource( 7 )
walk_spd = 10

[node name="Dashing" type="Node2D" parent="StatesHandler/Move"]
script = ExtResource( 8 )
dash_spd = 35
dash_amount = 3
time_regen = 10
shot_regen = 10

[node name="Dash" type="Node2D" parent="StatesHandler/Move/Dashing"]

[node name="Timer" type="Timer" parent="StatesHandler/Move/Dashing/Dash"]
wait_time = 0.2
one_shot = true

[node name="Particles" parent="StatesHandler/Move/Dashing/Dash" instance=ExtResource( 9 )]
lifetime = 0.2
process_material = SubResource( 5 )

[node name="Anim" type="AnimationPlayer" parent="StatesHandler/Move/Dashing/Dash"]
anims/Fade = SubResource( 6 )

[node name="Recharge" type="Node2D" parent="StatesHandler/Move/Dashing"]
editor/display_folded = true
script = ExtResource( 10 )

[node name="Wait_timer" type="Timer" parent="StatesHandler/Move/Dashing/Recharge"]
one_shot = true

[node name="Charge_timer" type="Timer" parent="StatesHandler/Move/Dashing/Recharge"]
wait_time = 0.05
autostart = true

[node name="Aim" type="Node2D" parent="StatesHandler/Move/Dashing"]
script = ExtResource( 11 )

[node name="Rotator" type="Node2D" parent="StatesHandler/Move/Dashing/Aim"]

[node name="Aim_pos" type="Position2D" parent="StatesHandler/Move/Dashing/Aim/Rotator"]
modulate = Color( 0.078125, 1, 0, 1 )
position = Vector2( 100, 0 )

[node name="Beam" type="Node2D" parent="StatesHandler/Move/Dashing/Aim"]

[node name="AimBeam" parent="StatesHandler/Move/Dashing/Aim/Beam" instance=ExtResource( 12 )]

[node name="Jumping" type="Node2D" parent="StatesHandler"]
script = ExtResource( 13 )
jump_height = 20

[node name="Sliding" type="Node2D" parent="StatesHandler"]
script = ExtResource( 14 )

[node name="Status" type="Node2D" parent="StatesHandler"]
editor/display_folded = true
script = ExtResource( 15 )

[node name="Stunned" type="Node2D" parent="StatesHandler/Status"]
script = ExtResource( 16 )
stun_dur = 8

[node name="Invincible" type="Node2D" parent="StatesHandler/Status"]
editor/display_folded = true
script = ExtResource( 17 )
inv_dur = 8

[node name="Delay_timer" type="Timer" parent="StatesHandler/Status/Invincible"]
wait_time = 0.3
one_shot = true

[node name="Aiming" type="Node2D" parent="StatesHandler"]
script = ExtResource( 18 )

[node name="Airborn" type="Node2D" parent="StatesHandler"]
script = ExtResource( 19 )

[node name="MovementHandler" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 20 )

[node name="Bottom" type="Node2D" parent="MovementHandler"]
editor/display_folded = true

[node name="Ground_ray1" type="RayCast2D" parent="MovementHandler/Bottom"]
position = Vector2( 12, 30 )
enabled = true
cast_to = Vector2( 0, 2 )
script = ExtResource( 21 )

[node name="Ground_ray2" type="RayCast2D" parent="MovementHandler/Bottom"]
position = Vector2( -11.5, 30 )
enabled = true
cast_to = Vector2( 0, 2 )
script = ExtResource( 21 )

[node name="Left" type="Node2D" parent="MovementHandler"]
editor/display_folded = true

[node name="Left_ray" type="RayCast2D" parent="MovementHandler/Left"]
position = Vector2( -11.5, 30 )
enabled = true
cast_to = Vector2( 0, 2 )
script = ExtResource( 21 )

[node name="GunHandler" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 22 )
Gun_scene = ExtResource( 23 )

[node name="Dual_timer" type="Timer" parent="GunHandler"]
wait_time = 0.4
one_shot = true

[node name="HealthHandler" type="Node2D" parent="."]
script = ExtResource( 24 )

[node name="Body" type="CollisionShape2D" parent="."]
editor/display_folded = true
position = Vector2( 0.5, 0 )
z_index = 2
shape = SubResource( 7 )
script = ExtResource( 25 )
Turn_Time = 0.05

[node name="TurnHandler" type="Tween" parent="Body"]

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 26 )
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
playback_speed = 0.0
anims/Player_idle = SubResource( 8 )

[node name="GhostTrail" parent="." instance=ExtResource( 27 )]
set_opacity = 0.11

[node name="Player_Timers" type="Node2D" parent="."]
script = ExtResource( 28 )

[node name="Inv_timer" type="Timer" parent="Player_Timers"]
script = ExtResource( 29 )

[node name="Hit_timer" type="Timer" parent="Player_Timers"]
script = ExtResource( 30 )

[node name="Jump_timer" type="Timer" parent="Player_Timers"]
wait_time = 0.1
one_shot = true

[node name="JumpCorrect_timer" type="Timer" parent="Player_Timers"]
wait_time = 0.05
one_shot = true

[connection signal="share_Physics" from="." to="StatesHandler/Airborn" method="_on_Player_share_Physics"]
[connection signal="share_Physics" from="." to="MovementHandler" method="_on_Player_share_Physics"]
[connection signal="aim_state" from="InputHandler" to="StatesHandler" method="_on_new_aim_state"]
[connection signal="jump_state" from="InputHandler" to="StatesHandler" method="_on_new_jump_state"]
[connection signal="move_state" from="InputHandler" to="StatesHandler" method="_on_new_move_state"]
[connection signal="pull_trigger" from="InputHandler" to="GunHandler" method="_pull_trigger"]
[connection signal="release_trigger" from="InputHandler" to="GunHandler" method="_on_release_trigger"]
[connection signal="timeout" from="StatesHandler/Move/Dashing/Dash/Timer" to="StatesHandler/Move/Dashing" method="exit"]
[connection signal="timeout" from="StatesHandler/Move/Dashing/Recharge/Wait_timer" to="StatesHandler/Move/Dashing/Recharge" method="_on_Wait_timer_timeout"]
[connection signal="timeout" from="StatesHandler/Move/Dashing/Recharge/Charge_timer" to="StatesHandler/Move/Dashing" method="_on_Charge_timer_timeout"]
[connection signal="timeout" from="StatesHandler/Status/Invincible/Delay_timer" to="StatesHandler/Status/Invincible" method="_on_Delay_timer_timeout"]
[connection signal="on_ground" from="MovementHandler/Bottom/Ground_ray1" to="MovementHandler" method="_if_on_ground"]
[connection signal="on_ground" from="MovementHandler/Bottom/Ground_ray2" to="MovementHandler" method="_if_on_ground"]
[connection signal="on_ground" from="MovementHandler/Left/Left_ray" to="MovementHandler" method="_if_on_ground"]
[connection signal="timeout" from="GunHandler/Dual_timer" to="GunHandler" method="_on_Dual_timer_timeout"]
[connection signal="timeout" from="Player_Timers/Inv_timer" to="." method="_on_Inv_time_timeout"]
[connection signal="timeout" from="Player_Timers/Hit_timer" to="." method="_on_Hit_time_timeout"]
[connection signal="timeout" from="Player_Timers/Jump_timer" to="." method="_on_Jump_timer_timeout"]
[connection signal="timeout" from="Player_Timers/JumpCorrect_timer" to="." method="_on_JumpCorrect_timer_timeout"]
